# An-lise-de-Vendas-de-E-commerce

./: .env.example  .gitignore  README.md  pyproject.toml
dbt_project/models/marts/: fact_sales.sql
dbt_project/models/staging/: stg_orders.sql
etl/: ingest_data.py
pipeline/: run_pipeline.py
sql/: kpis.sql
